@@ -1,11 +1,11 @@
 package uk.gov.hmcts.reform.prl.controllers;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.Parameter;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import io.swagger.v3.oas.annotations.security.SecurityRequirement;
-import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.bind.annotation.PostMapping;
@@ -26,6 +26,8 @@ import uk.gov.hmcts.reform.prl.models.dto.bundle.BundleSubfolder;
 import uk.gov.hmcts.reform.prl.models.dto.bundle.BundleSubfolderDetails;
 import uk.gov.hmcts.reform.prl.models.dto.bundle.BundlingInformation;
 import uk.gov.hmcts.reform.prl.models.dto.ccd.CaseData;
+import uk.gov.hmcts.reform.prl.services.AuthorisationService;
+import uk.gov.hmcts.reform.prl.services.EventService;
 import uk.gov.hmcts.reform.prl.services.bundle.BundlingService;
 
 import java.time.ZoneId;
@@ -34,19 +36,28 @@ import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import static java.util.Objects.nonNull;
 import static javax.ws.rs.core.MediaType.APPLICATION_JSON;
+import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.INVALID_CLIENT;
 
 @Slf4j
 @RestController
 @SecurityRequirement(name = "Bearer Authentication")
-@RequiredArgsConstructor(onConstructor = @__(@Autowired))
 @RequestMapping("/bundle")
 public class BundlingController extends AbstractCallbackController {
+    private final BundlingService bundlingService;
+    private final AuthorisationService authorisationService;
+
     @Autowired
-    private BundlingService bundlingService;
+    protected BundlingController(ObjectMapper objectMapper,
+                                 EventService eventPublisher,
+                                 BundlingService bundlingService,
+                                 AuthorisationService authorisationService) {
+        super(objectMapper, eventPublisher);
+        this.bundlingService = bundlingService;
+        this.authorisationService = authorisationService;
+    }
 
     @PostMapping(path = "/createBundle", consumes = APPLICATION_JSON, produces = APPLICATION_JSON)
     @Operation(description = "Creating bundle. ")
@@ -58,26 +69,37 @@ public class BundlingController extends AbstractCallbackController {
                                                              @RequestHeader("ServiceAuthorization") @Parameter(hidden = true)
                                                              String serviceAuthorization,
                                                              @RequestBody CallbackRequest callbackRequest) {
-        CaseData caseData = getCaseData(callbackRequest.getCaseDetails());
-        Map<String, Object> caseDataUpdated = callbackRequest.getCaseDetails().getData();
-        moveExistingCaseBundlesToHistoricalBundles(caseData);
-        log.info("*** Creating Bundle for the case id : {}", caseData.getId());
-        BundleCreateResponse bundleCreateResponse = bundlingService.createBundleServiceRequest(caseData,
-            callbackRequest.getEventId(), authorization);
-        if (null != bundleCreateResponse && null != bundleCreateResponse.getData() && null != bundleCreateResponse.getData().getCaseBundles()) {
-            caseDataUpdated.put("bundleInformation",
-                BundlingInformation.builder().caseBundles(removeEmptyFolders(bundleCreateResponse.getData().getCaseBundles()))
-                    .historicalBundles(caseData.getBundleInformation().getHistoricalBundles())
-                    .bundleConfiguration(bundleCreateResponse.data.getBundleConfiguration())
-                    .bundleCreationDateAndTime(DateTimeFormatter.ISO_OFFSET_DATE_TIME
-                        .format(ZonedDateTime.now(ZoneId.of("Europe/London"))))
-                    .bundleHearingDateAndTime(null != bundleCreateResponse.getData().getData()
-                        && null != bundleCreateResponse.getData().getData().getHearingDetails().getHearingDateAndTime()
-                        ? bundleCreateResponse.getData().getData().getHearingDetails().getHearingDateAndTime() : "")
-                    .build());
-            log.info("*** Bundle created successfully.. Updating bundle Information in case data for the case id: {}", caseData.getId());
+        if (authorisationService.isAuthorized(authorization,serviceAuthorization)) {
+            CaseData caseData = getCaseData(callbackRequest.getCaseDetails());
+            Map<String, Object> caseDataUpdated = callbackRequest.getCaseDetails().getData();
+            moveExistingCaseBundlesToHistoricalBundles(caseData);
+            log.info("*** Creating Bundle for the case id : {}", caseData.getId());
+            BundleCreateResponse bundleCreateResponse = bundlingService.createBundleServiceRequest(caseData,
+                                                                                                   callbackRequest.getEventId(),
+                                                                                                   authorization
+            );
+            if (null != bundleCreateResponse && null != bundleCreateResponse.getData() && null != bundleCreateResponse.getData().getCaseBundles()) {
+                caseDataUpdated.put(
+                    "bundleInformation",
+                    BundlingInformation.builder().caseBundles(removeEmptyFolders(bundleCreateResponse.getData().getCaseBundles()))
+                        .historicalBundles(caseData.getBundleInformation().getHistoricalBundles())
+                        .bundleConfiguration(bundleCreateResponse.data.getBundleConfiguration())
+                        .bundleCreationDateAndTime(DateTimeFormatter.ISO_OFFSET_DATE_TIME
+                                                       .format(ZonedDateTime.now(ZoneId.of("Europe/London"))))
+                        .bundleHearingDateAndTime(null != bundleCreateResponse.getData().getData()
+                                                      && null != bundleCreateResponse.getData().getData().getHearingDetails().getHearingDateAndTime()
+                                                      ? bundleCreateResponse.getData().getData().getHearingDetails().getHearingDateAndTime() : "")
+                        .build()
+                );
+                log.info(
+                    "*** Bundle created successfully.. Updating bundle Information in case data for the case id: {}",
+                    caseData.getId()
+                );
+            }
+            return AboutToStartOrSubmitCallbackResponse.builder().data(caseDataUpdated).build();
+        } else {
+            throw (new RuntimeException(INVALID_CLIENT));
         }
-        return AboutToStartOrSubmitCallbackResponse.builder().data(caseDataUpdated).build();
     }
 
 
@@ -145,7 +167,7 @@ public class BundlingController extends AbstractCallbackController {
                 if (null != bundleNestedSubfolder1.getValue().getDocuments()) {
                     bundleDocumentsPostEmptyRemoval = bundleNestedSubfolder1.getValue().getDocuments().stream()
                         .filter(bundleDocument -> nonNull(bundleDocument.getValue().getSourceDocument()))
-                        .collect(Collectors.toList());
+                        .toList();
                     if (!bundleDocumentsPostEmptyRemoval.isEmpty()) {
                         bundleNestedSubfolder1AfterRemoval.add(BundleNestedSubfolder1.builder()
                             .value(BundleNestedSubfolder1Details.builder().name(bundleNestedSubfolder1.getValue().getName())
