@@ -7,6 +7,9 @@ import io.swagger.v3.oas.annotations.Parameter;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import io.swagger.v3.oas.annotations.security.SecurityRequirement;
+import jakarta.validation.Valid;
+import jakarta.validation.constraints.NotNull;
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpHeaders;
@@ -31,9 +34,7 @@ import uk.gov.hmcts.reform.prl.services.hearings.HearingService;
 import uk.gov.hmcts.reform.prl.utils.CaseUtils;
 
 import java.util.List;
-import java.util.stream.Collectors;
-import javax.validation.Valid;
-import javax.validation.constraints.NotNull;
+import java.util.Map;
 
 import static javax.ws.rs.core.MediaType.APPLICATION_JSON;
 import static org.springframework.http.HttpHeaders.AUTHORIZATION;
@@ -41,25 +42,14 @@ import static org.springframework.http.HttpHeaders.AUTHORIZATION;
 @Slf4j
 @RestController
 @SecurityRequirement(name = "Bearer Authentication")
+@RequiredArgsConstructor(onConstructor = @__(@Autowired))
 public class CaseController {
-
-    @Autowired
-    ObjectMapper objectMapper;
-
-    @Autowired
-    HearingService hearingService;
-
-    @Autowired
-    CaseService caseService;
-
-    @Autowired
-    AuthorisationService authorisationService;
-
-    @Autowired
-    ConfidentialDetailsMapper confidentialDetailsMapper;
-
-    @Autowired
-    AuthTokenGenerator authTokenGenerator;
+    private final ObjectMapper objectMapper;
+    private final HearingService hearingService;
+    private final CaseService caseService;
+    private final AuthorisationService authorisationService;
+    private final ConfidentialDetailsMapper confidentialDetailsMapper;
+    private final AuthTokenGenerator authTokenGenerator;
     private static final String INVALID_CLIENT = "Invalid Client";
 
     @GetMapping(path = "/{caseId}", produces = APPLICATION_JSON)
@@ -163,23 +153,23 @@ public class CaseController {
         } else {
             throw (new RuntimeException(INVALID_CLIENT));
         }
-        return caseDataList.stream().map(this::buildCitizenCaseData).collect(Collectors.toList());
+        return caseDataList.stream().map(this::buildCitizenCaseData).toList();
     }
 
     private CitizenCaseData buildCitizenCaseData(CaseData caseData) {
         return new CitizenCaseData(caseData, caseData.getState().getLabel());
     }
 
-    @PostMapping(path = "/citizen/link", consumes = APPLICATION_JSON, produces = APPLICATION_JSON)
+    @PostMapping(value = "/citizen/link", consumes = APPLICATION_JSON, produces = APPLICATION_JSON)
     @Operation(description = "Linking case to citizen account with access code")
-    public void linkCitizenToCase(@RequestHeader("caseId") String caseId,
-                                  @RequestHeader("accessCode") String accessCode,
-                                  @RequestHeader(HttpHeaders.AUTHORIZATION) String authorisation,
-                                  @RequestHeader(PrlAppsConstants.SERVICE_AUTHORIZATION_HEADER) String s2sToken) {
-        caseService.linkCitizenToCase(authorisation, s2sToken, accessCode, caseId);
+    public void linkCitizenToCase(@RequestHeader(HttpHeaders.AUTHORIZATION) String authorisation,
+                                  @RequestHeader(PrlAppsConstants.SERVICE_AUTHORIZATION_HEADER) String s2sToken,
+                                  @RequestHeader("caseId") String caseId,
+                                  @RequestHeader("accessCode") String accessCode) {
+        caseService.linkCitizenToCase(authorisation, s2sToken, caseId, accessCode);
     }
 
-    @GetMapping(path = "/validate-access-code", produces = APPLICATION_JSON)
+    @GetMapping(value = "/validate-access-code", produces = APPLICATION_JSON)
     @Operation(description = "Frontend to fetch the data")
     public String validateAccessCode(@RequestHeader(HttpHeaders.AUTHORIZATION) @Parameter(hidden = true) String authorisation,
                                      @RequestHeader(PrlAppsConstants.SERVICE_AUTHORIZATION_HEADER) String s2sToken,
@@ -207,12 +197,14 @@ public class CaseController {
                                @RequestBody CaseData caseData) {
         CaseDetails caseDetails = null;
 
-
-        caseDetails = caseService.createCase(caseData, authorisation);
-        CaseData createdCaseData = CaseUtils.getCaseData(caseDetails, objectMapper);
-        return createdCaseData.toBuilder().noOfDaysRemainingToSubmitCase(
-            PrlAppsConstants.CASE_SUBMISSION_THRESHOLD).build();
-
+        if (isAuthorized(authorisation, s2sToken)) {
+            caseDetails = caseService.createCase(caseData, authorisation);
+            CaseData createdCaseData = CaseUtils.getCaseData(caseDetails, objectMapper);
+            return createdCaseData.toBuilder().noOfDaysRemainingToSubmitCase(
+                PrlAppsConstants.CASE_SUBMISSION_THRESHOLD).build();
+        } else {
+            throw (new RuntimeException(INVALID_CLIENT));
+        }
     }
 
     @PostMapping(value = "{caseId}/withdraw", consumes = APPLICATION_JSON, produces = APPLICATION_JSON)
@@ -255,6 +247,24 @@ public class CaseController {
         }
     }
 
+    @GetMapping(value = "/fetchIdam-Am-roles/{emailId}", consumes = APPLICATION_JSON, produces = APPLICATION_JSON)
+    @Operation(description = "Get hearing details for a case")
+    @ApiResponses(value = {
+        @ApiResponse(responseCode = "200", description = "success"),
+        @ApiResponse(responseCode = "401", description = "Provided Authorization token is missing or invalid"),
+        @ApiResponse(responseCode = "500", description = "Internal Server Error")
+    })
+    public Map<String, String> fetchIdamAmRoles(
+        @RequestHeader(AUTHORIZATION) String authorisation,
+        @PathVariable("emailId") String emailId) {
+        boolean isAuthorised = authorisationService.authoriseUser(authorisation);
+        if (isAuthorised) {
+            return caseService.fetchIdamAmRoles(authorisation, emailId);
+        } else {
+            throw (new RuntimeException(INVALID_CLIENT));
+        }
+    }
+
     @PostMapping(value = "{caseId}/{eventId}/update-dss-case", consumes = APPLICATION_JSON, produces = APPLICATION_JSON)
     @Operation(description = "Updating casedata")
     public CaseData updateDssCase(
@@ -277,5 +287,4 @@ public class CaseController {
             throw (new RuntimeException(INVALID_CLIENT));
         }
     }
-
 }
