@@ -2,28 +2,37 @@ package uk.gov.hmcts.reform.prl.mapper.citizen;
 
 import uk.gov.hmcts.reform.prl.enums.ContactPreferences;
 import uk.gov.hmcts.reform.prl.enums.Gender;
+import uk.gov.hmcts.reform.prl.enums.RelationshipsEnum;
 import uk.gov.hmcts.reform.prl.enums.YesNoDontKnow;
+import uk.gov.hmcts.reform.prl.enums.YesNoIDontKnow;
 import uk.gov.hmcts.reform.prl.enums.YesOrNo;
 import uk.gov.hmcts.reform.prl.enums.citizen.ConfidentialityListEnum;
 import uk.gov.hmcts.reform.prl.models.Address;
 import uk.gov.hmcts.reform.prl.models.Element;
 import uk.gov.hmcts.reform.prl.models.c100rebuild.ApplicantDto;
 import uk.gov.hmcts.reform.prl.models.c100rebuild.C100RebuildApplicantDetailsElements;
+import uk.gov.hmcts.reform.prl.models.c100rebuild.C100RebuildChildDetailsElements;
+import uk.gov.hmcts.reform.prl.models.c100rebuild.ChildDetail;
 import uk.gov.hmcts.reform.prl.models.c100rebuild.DateofBirth;
+import uk.gov.hmcts.reform.prl.models.complextypes.ChildrenAndApplicantRelation;
 import uk.gov.hmcts.reform.prl.models.complextypes.PartyDetails;
 import uk.gov.hmcts.reform.prl.models.complextypes.citizen.Response;
 import uk.gov.hmcts.reform.prl.models.complextypes.citizen.response.confidentiality.KeepDetailsPrivate;
 import uk.gov.hmcts.reform.prl.models.dto.ccd.CaseData;
+import uk.gov.hmcts.reform.prl.models.dto.ccd.Relations;
 
 import java.time.LocalDate;
 import java.util.Arrays;
+import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Objects;
+import java.util.Optional;
 import java.util.stream.Stream;
 
 import static java.util.Objects.isNull;
 import static org.apache.commons.lang3.ObjectUtils.isNotEmpty;
+import static uk.gov.hmcts.reform.prl.enums.YesOrNo.No;
 import static uk.gov.hmcts.reform.prl.enums.YesOrNo.Yes;
 
 public class CaseDataApplicantElementsMapper {
@@ -36,10 +45,17 @@ public class CaseDataApplicantElementsMapper {
     private static final String TELEPHONE_FIELD = "telephone";
     private static final String I_DONT_KNOW = "I dont know";
 
-    public static void updateApplicantElementsForCaseData(CaseData.CaseDataBuilder caseDataBuilder,
-                                                      C100RebuildApplicantDetailsElements c100RebuildApplicantDetailsElements) {
+    public static void updateApplicantElementsForCaseData(CaseData.CaseDataBuilder<?,?> caseDataBuilder,
+                                                          C100RebuildApplicantDetailsElements c100RebuildApplicantDetailsElements,
+                                                          C100RebuildChildDetailsElements c100RebuildChildDetailsElements) {
+
         caseDataBuilder
-                .applicants(buildApplicants(c100RebuildApplicantDetailsElements));
+            .applicants(buildApplicants(c100RebuildApplicantDetailsElements))
+            .relations(Relations.builder()
+                           .childAndApplicantRelations(
+                               buildChildAndApplicantRelation(c100RebuildApplicantDetailsElements,
+                                                              c100RebuildChildDetailsElements))
+                           .build());
     }
 
     private static List<Element<PartyDetails>> buildApplicants(C100RebuildApplicantDetailsElements
@@ -49,16 +65,16 @@ public class CaseDataApplicantElementsMapper {
 
         return applicantDtoList.stream()
                 .map(applicantDto -> Element.<PartyDetails>builder().value(buildPartyDetails(applicantDto)).build())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private static PartyDetails buildPartyDetails(ApplicantDto applicantDto) {
         List<String> contactDetailsPrivateList1 = Arrays.stream(applicantDto.getContactDetailsPrivate())
-                .collect(Collectors.toList());
+                .toList();
         List<String> contactDetailsPrivateList2 = Arrays.stream(applicantDto.getContactDetailsPrivateAlternative())
-                .collect(Collectors.toList());
+                .toList();
         List<String> contactDetailsPrivateList = Stream.concat(contactDetailsPrivateList1.stream(),
-                contactDetailsPrivateList2.stream()).collect(Collectors.toList());
+                contactDetailsPrivateList2.stream()).toList();
         return PartyDetails
                 .builder()
                 .firstName(applicantDto.getApplicantFirstName())
@@ -68,7 +84,6 @@ public class CaseDataApplicantElementsMapper {
                 .otherGender(applicantDto.getPersonalDetails().getOtherGenderDetails())
                 .dateOfBirth(buildDateOfBirth(applicantDto.getPersonalDetails().getDateOfBirth()))
                 .placeOfBirth(applicantDto.getPersonalDetails().getApplicantPlaceOfBirth())
-                //.relationshipToChildren(buildChildRelationship(applicantDto.getRelationshipDetails()))
                 .phoneNumber(isNotEmpty(applicantDto.getApplicantContactDetail().getTelephoneNumber())
                         ? applicantDto.getApplicantContactDetail().getTelephoneNumber() : null)
                 .canYouProvideEmailAddress(applicantDto.getApplicantContactDetail().getCanProvideEmail())
@@ -100,7 +115,7 @@ public class CaseDataApplicantElementsMapper {
     }
 
     private static YesOrNo buildConfidentialField(List<String> contactDetailsPrivateList, String field) {
-        return contactDetailsPrivateList.contains(field) ? Yes : YesOrNo.No;
+        return contactDetailsPrivateList.contains(field) ? Yes : No;
     }
 
     private static LocalDate buildDateOfBirth(DateofBirth date) {
@@ -124,8 +139,8 @@ public class CaseDataApplicantElementsMapper {
         return KeepDetailsPrivate
             .builder()
             .otherPeopleKnowYourContactDetails(I_DONT_KNOW.equalsIgnoreCase(applicantDto.getDetailsKnown())
-                                                   ? YesNoDontKnow.dontKnow :
-                                                   YesNoDontKnow.getDisplayedValueIgnoreCase(applicantDto.getDetailsKnown()))
+                                                   ? YesNoIDontKnow.dontKnow :
+                                                   YesNoIDontKnow.getDisplayedValueIgnoreCase(applicantDto.getDetailsKnown()))
             .confidentiality(isNotEmpty(applicantDto.getStart())
                                  ? YesOrNo.getValue(applicantDto.getStart())
                                  : YesOrNo.getValue(applicantDto.getStartAlternative()))
@@ -139,8 +154,40 @@ public class CaseDataApplicantElementsMapper {
         } else {
             return contactDetailsPrivateList.stream().map(c -> TELEPHONE_FIELD.equals(c)
                 ? ConfidentialityListEnum.phoneNumber
-                : ConfidentialityListEnum.getValue(c)).collect(
-                Collectors.toList());
+                : ConfidentialityListEnum.getValue(c)).toList();
         }
+    }
+
+    private static List<Element<ChildrenAndApplicantRelation>> buildChildAndApplicantRelation(
+        C100RebuildApplicantDetailsElements c100RebuildApplicantDetailsElements,
+        C100RebuildChildDetailsElements c100RebuildChildDetailsElements) {
+
+        return c100RebuildApplicantDetailsElements.getApplicants().stream()
+            .map(applicantDto ->
+                     applicantDto.getRelationshipDetails().getRelationshipToChildren().stream()
+                         .map(childRelationship -> {
+                             Optional<ChildDetail> childDetails = c100RebuildChildDetailsElements.getChildDetails().stream()
+                                 .filter(childDetail -> childDetail.getId().equals(
+                                     childRelationship.getChildId())).findFirst();
+                             if (childDetails.isPresent()) {
+                                 ChildDetail childDetail = childDetails.get();
+
+                                 return Element.<ChildrenAndApplicantRelation>builder()
+                                     .value(ChildrenAndApplicantRelation.builder()
+                                                .childFullName(childDetail.getFirstName() + " " + childDetail.getLastName())
+                                                .childLivesWith(childDetail.getChildLiveWith().stream()
+                                                                    .anyMatch(c -> c.getId().equals(applicantDto.getId())) ? Yes : No)
+                                                .applicantFullName(applicantDto.getApplicantFirstName() + " " + applicantDto.getApplicantLastName())
+                                                .childAndApplicantRelation(RelationshipsEnum.getEnumForDisplayedValue(
+                                                    childRelationship.getRelationshipType()))
+                                                .childAndApplicantRelationOtherDetails(childRelationship.getOtherRelationshipTypeDetails())
+                                                .build()).build();
+                             }
+                             return null;
+                         })
+                         .filter(Objects::nonNull).toList()
+            )
+            .flatMap(Collection::stream)
+            .toList();
     }
 }
