@@ -11,14 +11,12 @@ import uk.gov.hmcts.reform.prl.models.c100rebuild.ChildMatters;
 import uk.gov.hmcts.reform.prl.models.c100rebuild.DateofBirth;
 import uk.gov.hmcts.reform.prl.models.c100rebuild.ParentialResponsibility;
 import uk.gov.hmcts.reform.prl.models.c100rebuild.PersonalDetails;
-import uk.gov.hmcts.reform.prl.models.complextypes.Child;
+import uk.gov.hmcts.reform.prl.models.complextypes.ChildDetailsRevised;
 import uk.gov.hmcts.reform.prl.models.dto.ccd.CaseData;
 
 import java.time.LocalDate;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static org.apache.commons.lang3.ObjectUtils.isNotEmpty;
 import static uk.gov.hmcts.reform.prl.enums.OrderTypeEnum.childArrangementsOrder;
@@ -47,10 +45,10 @@ public class CaseDataChildDetailsElementsMapper {
     private static final String RELOCATE_CHILDREN_DIFFERENT_AREAA = "relocateChildrenDifferentUkAreaA";
     private static final String RELOCATE_CHILDREN_OUTSIDE_UKA = "relocateChildrenOutsideUkA";
 
-    public static void updateChildDetailsElementsForCaseData(CaseData.CaseDataBuilder caseDataBuilder,
+    public static void updateChildDetailsElementsForCaseData(CaseData.CaseDataBuilder<?,?> caseDataBuilder,
                                                              C100RebuildChildDetailsElements c100RebuildChildDetailsElements) {
         caseDataBuilder
-            .children(buildChildDetails(c100RebuildChildDetailsElements.getChildDetails()))
+            .newChildDetails(buildChildDetails(c100RebuildChildDetailsElements.getChildDetails()))
             .childrenKnownToLocalAuthority(
                 YesNoDontKnow.getDisplayedValueIgnoreCase(
                     c100RebuildChildDetailsElements.getChildrenKnownToSocialServices()))
@@ -61,15 +59,15 @@ public class CaseDataChildDetailsElementsMapper {
                     c100RebuildChildDetailsElements.getChildrenSubjectOfProtectionPlan()));
     }
 
-    private static List<Element<Child>> buildChildDetails(List<ChildDetail> childDetails) {
+    private static List<Element<ChildDetailsRevised>> buildChildDetails(List<ChildDetail> childDetails) {
         return childDetails.stream()
             .map(CaseDataChildDetailsElementsMapper::mapToChildDetails)
-            .collect(Collectors.toList());
+            .toList();
     }
 
-    private static Element<Child> mapToChildDetails(ChildDetail childDetail) {
+    private static Element<ChildDetailsRevised> mapToChildDetails(ChildDetail childDetail) {
 
-        return Element.<Child>builder().value(Child.builder()
+        return Element.<ChildDetailsRevised>builder().value(ChildDetailsRevised.builder()
                    .firstName(childDetail.getFirstName())
                    .lastName(childDetail.getLastName())
                    .dateOfBirth(getDateOfBirth(childDetail))
@@ -78,10 +76,8 @@ public class CaseDataChildDetailsElementsMapper {
                    .otherGender(childDetail.getPersonalDetails().getOtherGenderDetails())
                    .parentalResponsibilityDetails(buildParentalResponsibility(
                        childDetail.getParentialResponsibility()))
-                   //This is to fix allTabService null pointer exception
-                   .personWhoLivesWithChild(Collections.emptyList())
                    .orderAppliedFor(buildOrdersApplyingFor(childDetail.getChildMatters()))
-                   .build()
+                                                  .build()
             ).build();
     }
 
