@@ -2,32 +2,46 @@ package uk.gov.hmcts.reform.prl.mapper.citizen;
 
 import uk.gov.hmcts.reform.prl.enums.DontKnow;
 import uk.gov.hmcts.reform.prl.enums.Gender;
+import uk.gov.hmcts.reform.prl.enums.RelationshipsEnum;
 import uk.gov.hmcts.reform.prl.enums.YesOrNo;
 import uk.gov.hmcts.reform.prl.models.Address;
 import uk.gov.hmcts.reform.prl.models.Element;
 import uk.gov.hmcts.reform.prl.models.c100rebuild.C100Address;
+import uk.gov.hmcts.reform.prl.models.c100rebuild.C100RebuildChildDetailsElements;
 import uk.gov.hmcts.reform.prl.models.c100rebuild.C100RebuildRespondentDetailsElements;
+import uk.gov.hmcts.reform.prl.models.c100rebuild.ChildDetail;
 import uk.gov.hmcts.reform.prl.models.c100rebuild.DateofBirth;
 import uk.gov.hmcts.reform.prl.models.c100rebuild.PersonalDetails;
 import uk.gov.hmcts.reform.prl.models.c100rebuild.RespondentDetails;
+import uk.gov.hmcts.reform.prl.models.complextypes.ChildrenAndRespondentRelation;
 import uk.gov.hmcts.reform.prl.models.complextypes.PartyDetails;
 import uk.gov.hmcts.reform.prl.models.dto.ccd.CaseData;
 
 import java.time.LocalDate;
+import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Objects;
+import java.util.Optional;
 
 import static org.apache.commons.lang3.ObjectUtils.isNotEmpty;
 import static uk.gov.hmcts.reform.prl.enums.YesOrNo.No;
+import static uk.gov.hmcts.reform.prl.enums.YesOrNo.Yes;
 
 public class CaseDataRespondentDetailsElementsMapper {
 
     private CaseDataRespondentDetailsElementsMapper() {
     }
 
-    public static void updateRespondentDetailsElementsForCaseData(CaseData.CaseDataBuilder caseDataBuilder,
-                                                                  C100RebuildRespondentDetailsElements c100RebuildRespondentDetailsElements) {
-        caseDataBuilder.respondents(buildRespondentDetails(c100RebuildRespondentDetailsElements));
+    public static void updateRespondentDetailsElementsForCaseData(CaseData.CaseDataBuilder<?,?> caseDataBuilder,
+                                                                  C100RebuildRespondentDetailsElements c100RebuildRespondentDetailsElements,
+                                                                  C100RebuildChildDetailsElements c100RebuildChildDetailsElements) {
+        caseDataBuilder
+            .respondents(buildRespondentDetails(c100RebuildRespondentDetailsElements))
+            .relations(caseDataBuilder.build().getRelations().toBuilder()
+                                      .childAndRespondentRelations(
+                                          buildChildAndRespondentRelation(c100RebuildRespondentDetailsElements,
+                                                                          c100RebuildChildDetailsElements))
+                                      .build());
     }
 
     private static List<Element<PartyDetails>> buildRespondentDetails(C100RebuildRespondentDetailsElements c100RebuildRespondentDetailsElements) {
@@ -35,7 +49,7 @@ public class CaseDataRespondentDetailsElementsMapper {
         List<RespondentDetails> respondentDetailsList = c100RebuildRespondentDetailsElements.getRespondentDetails();
 
         return respondentDetailsList.stream().map(respondentDetails -> Element.<PartyDetails>builder().value(
-            buildPartyDetails(respondentDetails)).build()).collect(Collectors.toList());
+            buildPartyDetails(respondentDetails)).build()).toList();
 
     }
 
@@ -86,7 +100,7 @@ public class CaseDataRespondentDetailsElementsMapper {
 
     private static YesOrNo buildAddressLivedLessThan5YearsDetails(RespondentDetails respondentDetails) {
 
-        return (!"Yes".equalsIgnoreCase(respondentDetails.getAddress().getAddressHistory())) ? YesOrNo.Yes : YesOrNo.No;
+        return (!"Yes".equalsIgnoreCase(respondentDetails.getAddress().getAddressHistory())) ? Yes : YesOrNo.No;
     }
 
     private static String buildPreviousName(RespondentDetails respondentDetails) {
@@ -100,16 +114,50 @@ public class CaseDataRespondentDetailsElementsMapper {
     }
 
     private static YesOrNo buildRespondentPlaceOfBirthKnown(PersonalDetails personalDetails) {
-        return (!"Yes".equalsIgnoreCase(personalDetails.getRespondentPlaceOfBirthUnknown())) ? YesOrNo.Yes : No;
+        return (!"Yes".equalsIgnoreCase(personalDetails.getRespondentPlaceOfBirthUnknown())) ? Yes : No;
     }
 
     private static YesOrNo buildCanYouProvideEmailAddress(RespondentDetails respondentDetails) {
 
-        return "Yes".equalsIgnoreCase(respondentDetails.getRespondentContactDetail().getDonKnowEmailAddress()) ? YesOrNo.No : YesOrNo.Yes;
+        return "Yes".equalsIgnoreCase(respondentDetails.getRespondentContactDetail().getDonKnowEmailAddress()) ? YesOrNo.No : Yes;
     }
 
     private static YesOrNo buildCanYouProvidePhoneNumber(RespondentDetails respondentDetails) {
 
-        return "Yes".equalsIgnoreCase(respondentDetails.getRespondentContactDetail().getDonKnowTelephoneNumber()) ? YesOrNo.No : YesOrNo.Yes;
+        return "Yes".equalsIgnoreCase(respondentDetails.getRespondentContactDetail().getDonKnowTelephoneNumber()) ? YesOrNo.No : Yes;
+    }
+
+    private static List<Element<ChildrenAndRespondentRelation>> buildChildAndRespondentRelation(
+        C100RebuildRespondentDetailsElements c100RebuildRespondentDetailsElements,
+        C100RebuildChildDetailsElements c100RebuildChildDetailsElements) {
+
+        return c100RebuildRespondentDetailsElements.getRespondentDetails().stream()
+            .map(respondentDetails ->
+                     respondentDetails.getRelationshipDetails().getRelationshipToChildren().stream()
+                         .map(childRelationship -> {
+                             Optional<ChildDetail> childDetails = c100RebuildChildDetailsElements.getChildDetails().stream()
+                                 .filter(childDetail -> childDetail.getId().equals(
+                                     childRelationship.getChildId())).findFirst();
+                             if (childDetails.isPresent()) {
+                                 ChildDetail childDetail = childDetails.get();
+
+                                 return Element.<ChildrenAndRespondentRelation>builder()
+                                     .value(ChildrenAndRespondentRelation.builder()
+                                                .childFullName(childDetail.getFirstName() + " " + childDetail.getLastName())
+                                                .childLivesWith(childDetail.getChildLiveWith().stream()
+                                                                    .anyMatch(c -> c.getId().equals(respondentDetails.getId())) ? Yes : No)
+                                                .respondentFullName(respondentDetails.getFirstName() + " " + respondentDetails.getLastName())
+                                                .childAndRespondentRelation(RelationshipsEnum.getEnumForDisplayedValue(
+                                                    childRelationship.getRelationshipType()))
+                                                .childAndRespondentRelationOtherDetails(childRelationship.getOtherRelationshipTypeDetails())
+                                                .build()).build();
+                             }
+                             return null;
+                         })
+                         .filter(Objects::nonNull)
+                         .toList()
+            )
+            .flatMap(Collection::stream)
+            .toList();
     }
 }
